# sfml-blueprints

./: .clang-format  CMakeLists.txt  run.sh
include/: action.h  actionMap.h  actionTarget.h  collision.h  configuration.h  entity.h  game.h  helpers.h  pch.h  player.h  resourceManager.h  shoot.h  shootPlayer.h  world.h
include/temp/: bigMeteor.h  enemy.h  mediumMeteor.h  meteor.h  saucer.h  shootSaucer.h  smallSaucer.h
src/: action.cpp  actionMap.cpp  actionTarget.cpp  collision.cpp  configuration.cpp  entity.cpp  game.cpp  main.cpp  player.cpp  shootPlayer.cpp  test.cpp  world.cpp
src/temp/: bigMeteor.cpp  enemy.cpp  mediumMeteor.cpp  meteor.cpp  saucer.cpp  shoot.cpp  shootPlayer.cpp  shootSaucer.cpp  smallSaucer.cpp
